fixed centering landing mobile panel one on iphone se

--- a/src/component/LandingPageV2/Introduction/style.css
+++ b/src/component/LandingPageV2/Introduction/style.css
@@ -159,6 +159,12 @@
   color: #ffffff;
 }
 
+@media only screen and (max-device-width: 376px) {
+  .comingsoontext {
+    left: 6.5rem;
+  }
+}
+
 .desktop {
   /* generate */
   display: inline;
